// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RolePill should render DEV 1`] = `
<div>
  <svg
    height="70"
    width="70"
  >
    <circle
      cx="36"
      cy="36"
      fill="#E5E5E5"
      r="18"
    />
    <text
      fill="#AAAAAA"
      font-family="Verdana"
      font-size="11"
      font-weight="bold"
      x="24"
      y="40"
    >
      DEV
    </text>
  </svg>
</div>
`;

exports[`RolePill should render GC 1`] = `
<div>
  <svg
    height="70"
    width="70"
  >
    <circle
      cx="36"
      cy="36"
      fill="#E5E5E5"
      r="18"
    />
    <text
      fill="#AAAAAA"
      font-family="Verdana"
      font-size="13"
      font-weight="bold"
      x="26"
      y="41"
    >
      GC
    </text>
  </svg>
</div>
`;

exports[`RolePill should render SUB 1`] = `
<div>
  <svg
    height="70"
    width="70"
  >
    <circle
      cx="36"
      cy="36"
      fill="#E5E5E5"
      r="18"
    />
    <text
      fill="#AAAAAA"
      font-family="Verdana"
      font-size="11"
      font-weight="bold"
      x="24"
      y="40"
    >
      SUB
    </text>
  </svg>
</div>
`;
